# fork-tennesseeEastman

./: .gitignore  Dockerfile  README.md
analysis/: README.md
analysis/tep_analysis/: plot.py
docs/: 03-falhas.md  04-experimentos.md  05-disturbios.md  06-controle.md  06-ruidos.md  07-controle.md  07-grpc-architecture.md  08-grpc-architecture.md  1.md  2.md  3.md  4.md  5.md
docs/cases/: te_exp10_snapshot.toml  te_exp11_snapshot.toml  te_exp3_snapshot.toml  te_exp5_snapshot.toml  te_mode1_initial_state.toml
tennessee-eastman-service/: simulation_log.csv
tennessee-eastman-service/cases/: te_exp4_snapshot.toml  te_exp7_snapshot.toml  te_exp9_snapshot.toml  te_mode1_initial_state.toml
tennessee-eastman-service/core/src/: bus.rs  initial_state.rs  lib.rs  params.rs  plant.rs  snapshot.rs  state.rs
tennessee-eastman-service/core/src/dynamics/: disturbance.rs  mod.rs  model.rs  tennessee.rs  thermo.rs
tennessee-eastman-service/core/src/dynamics/tennessee/: mod.rs
tennessee-eastman-service/core/src/dynamics/tep/: constants.rs  disturbance_state.rs  mod.rs  model.rs  tesub.rs
tennessee-eastman-service/core/src/method/: euler.rs  integrator.rs  mod.rs  rk4.rs
tennessee-eastman-service/core/src/sensor/: model.rs
tennessee-eastman-service/service/: Cargo.toml  build.rs
tennessee-eastman-service/service/proto/tep/v1/: plant.proto
tennessee-eastman-service/service/src/: config.rs  dashboard.rs  grpc_server.rs  main.rs  metadata.rs  resolver.rs  runtime.rs  shared.rs
tennessee-eastman-service/service/src/controllers/: mod.rs  p_controller.rs
