# Sabe 'quando rodar', 'como rodar', 'onde publicar dados', 'como receber entradas'. 'loop', 'clock', 'interfaces'.
# Não sabe como a planta funciona internamente.

[package]
name = "te_service"
version = "0.1.0"
edition = "2021"

[dependencies]
te_core = { path = "../core" }
ratatui   = "0.28"
crossterm = "0.28"

